--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -68,12 +68,12 @@ jobs:
         cd openwrt
 #        sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
         
-    - name: Update & Install feeds
-      working-directory: ./openwrt
-      run: |
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
-        ./scripts/feeds install -a
+#    - name: Update & Install feeds
+#      working-directory: ./openwrt
+#      run: |
+#        ./scripts/feeds update -a
+#        ./scripts/feeds install -a
+#        ./scripts/feeds install -a
 
     #- name: Import external feeds
     #  working-directory: ./openwrt
@@ -100,7 +100,7 @@ jobs:
       working-directory: ./openwrt
       run: |
         echo -e "$(nproc) thread build."
-        make V=s
+        make -j$(nproc) V=s
 
     - name : Upload artifact
       uses: actions/upload-artifact@master
