--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -96,7 +96,7 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Build firmware -j$(nproc)
+    - name: Build firmware
       working-directory: ./openwrt
       run: |
         echo -e "$(nproc) thread build."
