--- a/x86_64.config
+++ b/x86_64.config
@@ -444,7 +444,7 @@ CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=n
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-base=y
@@ -569,7 +569,7 @@ CONFIG_PACKAGE_uwsgi=y
 CONFIG_PACKAGE_uwsgi-cgi-plugin=y
 CONFIG_PACKAGE_uwsgi-luci-support=y
 CONFIG_PACKAGE_uwsgi-syslog-plugin=y
-CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_v2ray=n
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_verysync=y
 CONFIG_PACKAGE_vlmcsd=y
