--- a/x86.config
+++ b/x86.config
@@ -569,7 +569,7 @@ CONFIG_PACKAGE_uwsgi=y
 CONFIG_PACKAGE_uwsgi-cgi-plugin=y
 CONFIG_PACKAGE_uwsgi-luci-support=y
 CONFIG_PACKAGE_uwsgi-syslog-plugin=y
-CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_v2ray=n
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_verysync=y
 CONFIG_PACKAGE_vlmcsd=y
