--- a/.github/workflows/Build_OP_x86.yml
+++ b/.github/workflows/Build_OP_x86.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: Build_x86_64
+name: Build_x86
 
 on: 
   repository_dispatch:
@@ -80,9 +80,9 @@ jobs:
     #    git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
     #    git clone "your_github_link" package/"your_folder_name"      
 
-    - name: Configuration Customization - Build_x86_64
+    - name: Configuration Customization - Build_x86
       env:
-        CONFIG_FILE: 'x86_64.config'
+        CONFIG_FILE: 'x86.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
