--- a/.github/workflows/Build_OP_n1.yml
+++ b/.github/workflows/Build_OP_n1.yml
@@ -103,7 +103,7 @@ jobs:
         echo -e "$(nproc) thread build."
         make -j$(nproc) || make -j1 V=s
         
-    - name: Build firmware
+    - name: Build N1 firmware
       run: |
           cp openwrt/bin/targets/*/*/*.tar.gz ./mknop/openwrt
           sudo ./mknop/gen_openwrt -d -k latest          
