--- a/n1.config
+++ b/n1.config
@@ -192,6 +192,7 @@ CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-of-mdio=y
 CONFIG_PACKAGE_kmod-pps=y
 CONFIG_PACKAGE_kmod-ptp=y
+CONFIG_PACKAGE_kmod-rtl88x2bu=n
 CONFIG_PACKAGE_kmod-rtl8180=y
 CONFIG_PACKAGE_kmod-rtl8187=y
 CONFIG_PACKAGE_kmod-rtl8192c-common=y
