--- a/.github/workflows/Build_OP_n1.yml
+++ b/.github/workflows/Build_OP_n1.yml
@@ -68,7 +68,7 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         git clone https://github.com/tuanqing/mknop
-#        git clone https://github.com/tuanqing/install-program openwrt/package/install-program
+        git clone https://github.com/tuanqing/install-program openwrt/package/install-program
  
 #    - name: Update & Install feeds
 #      working-directory: ./openwrt
