--- a/n1.config
+++ b/n1.config
@@ -397,6 +397,7 @@ CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+CONFIG_PACKAGE_rtl8821ae-firmware=n
 CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_simple-obfs-server=y
 CONFIG_PACKAGE_smartdns=y
