--- a/.github/workflows/Build_OP_n1.yml
+++ b/.github/workflows/Build_OP_n1.yml
@@ -90,6 +90,7 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
         rm -rf openwrt/package/openwrt-packages/rtl88x2bu
+        rm -rf openwrt/package/openwrt-packages/luci-app-passwall
         cd openwrt && make defconfig
         
     - name: Download package
