--- a/n1.config
+++ b/n1.config
@@ -76,6 +76,7 @@ CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_dns2socks=y
 # CONFIG_PACKAGE_dnsmasq is not set
+# CONFIG_PACKAGE_kmod-rtl88x2bu is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
