--- a/n1.config
+++ b/n1.config
@@ -268,6 +268,7 @@ CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-maxminddb=y
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-app-terminal=n
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
