--- a/.github/workflows/Build_OP_n1.yml
+++ b/.github/workflows/Build_OP_n1.yml
@@ -147,4 +147,4 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: ${{ env.firmware_vplus }}
-        path: out/vplus
+        path: mknop/out/vplus
