--- a/.github/workflows/Build_OP_x86.yml
+++ b/.github/workflows/Build_OP_x86.yml
@@ -64,6 +64,7 @@ jobs:
         REPO_BRANCH: openwrt-19.07
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        [ -e files ] && mv files openwrt/files
         cd openwrt
 #        sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
         
