--- a/.github/workflows/Build_OP_n1.yml
+++ b/.github/workflows/Build_OP_n1.yml
@@ -66,6 +66,7 @@ jobs:
         REPO_BRANCH: openwrt-19.07
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        [ -e files ] && mv files openwrt/files
         git clone https://github.com/tuanqing/mknop       
         cd openwrt
         git clone https://github.com/tuanqing/install-program package/install-program
